@startuml

title Tag Feature Class Diagram

class Course {
  - courseCode : String
  - courseName : String
  - tags : Set<Tag>
  + getTags() : Set<Tag>
  + withAddedTag(Tag) : Course
}

class Tag {
  - tagName : String
  + getTagName() : String
  + isSameTag(Tag) : boolean
}

class AddTagCommand {
  - index : Index
  - tag : Tag
  + execute(Model) : CommandResult
}

class Model {
  + getFilteredCourseList() : List<Course>
  + setCourse(Course, Course)
}

AddTagCommand --> Model : uses
AddTagCommand --> Course : modifies
Course --> Tag : contains *

@enduml
